<!DOCTYPE resources[]>
<resources>
    <string name="app_name">MyTLC</string>
    <string name="day_name">Mon</string>
    <string name="day_num">9</string>
    <string name="time_1">10:30 AM\u201310:00 PM</string>
    <string name="time_2">7:30\u201310:00 PM</string>
    <string name="time_3">10:00\u201310:30 PM</string>
    <string name="dept_1">Computers</string>
    <string name="dept_2">Gaming</string>
    <string name="dept_3">Digital Imaging</string>
    <string name="username_hint">Employee ID</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="remember_checkbox">Remember password</string>
    <string name="item_logout">Logout</string>
    <string name="item_import">Import to calendar</string>
    <string name="item_delete">Delete username</string>
    <string name="dialog_calendar">Calendar</string>
    <string name="dialog_title">Event Title</string>
    <string name="dialog_store">Store Number</string>
    <string name="dialog_button_store">Get Address</string>
    <string name="dialog_store_address">Store Address</string>
    <string name="dialog_title_default">Work at Best Buy</string>
    <string name="dialog_check_delete">Delete old or duplicate events</string>
    <string name="hours">Hours</string>
    <string name="hours_num">5.5</string>
    <string name="item_alarm">Set next alarm</string>
    <string name="dialog_alarm">Next shift starts at: 7:45 AM</string>
    <string name="activity">Sales Floor</string>
    <string name="date_span">8/6–8/12</string>
    <string name="weeks_hours">55 Hours</string>
    <string name="weeks_pay">$450</string>
    <string name="item_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_pay_title">Hourly pay</string>
    <string name="pref_tax_title">Tax percentage</string>
    <string name="pref_cat_pay_title">Pay</string>
    <string name="pref_cat_theme_title">Theme</string>
    <string name="pref_cat_schedule_title">Schedule</string>
    <string name="pref_cat_account_title">Account</string>
    <string name="pref_base_title">Base theme</string>
    <string name="pref_base_default">Light</string>
    <string name="pref_custom_title">Custom colors</string>
    <string name="dialog_primary">Primary color</string>
    <string name="dialog_accent">Accent color</string>
    <string name="item_past">Show archived shifts</string>
    <string name="pref_past_title">Archive shifts</string>
    <string name="pref_past_sum">Allows for accurate pay and hour calculation</string>
    <string name="item_report">Report issue</string>
    <string name="dialog_issue_message">Message</string>
    <string name="dialog_issue_email">Follow-up email</string>
    <string name="pref_account_change_user">Update saved username</string>
    <string name="pref_account_change_pass">Update saved password</string>
    <string name="pref_account_delete_settings">Delete settings on logout</string>
    <string name="pref_account_delete_events">Delete imported events on logout</string>
    <string name="pref_background_title">Background syncing</string>
    <string name="pref_background_summary">Syncing occurs at 6:00am (CST) after MyTLC unlocks</string>
    <string name="pref_import_title">Calendar import after sync</string>
    <string name="pref_import_cal_title">Selected calendar</string>
    <string name="pref_alarm_title">Set alarm after sync</string>
    <string name="pref_alarm_time_title">Alarm offset</string>
    <string name="dialog_offset_minus">-</string>
    <string name="dialog_offset_hours">Hours</string>
    <string name="dialog_offset_colon">:</string>
    <string name="dialog_offset_min">Minutes</string>
    <string name="pref_show_notification_title">Display sync notification</string>
</resources>
