<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/divider_vertical"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?attr/dividerVertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginLeft="56dp"
                app:layout_constraintLeft_toLeftOf="parent"></View>

            <View
                android:id="@+id/divider_vertical_1"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?attr/dividerVertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginLeft="136dp"
                app:layout_constraintLeft_toLeftOf="parent"></View>

            <TextView
                android:id="@+id/textview_day_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/day_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/divider_vertical"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/textview_day_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_num"
                app:layout_constraintLeft_toLeftOf="@+id/textview_day_name"
                app:layout_constraintRight_toRightOf="@+id/textview_day_name"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textview_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_1"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="@+id/textview_dept_1"
                app:layout_constraintRight_toRightOf="@+id/textview_dept_1"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textview_dept_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Computers"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/divider_vertical_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/textview_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hours"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/divider_vertical"
                android:layout_marginLeft="0dp"
                app:layout_constraintRight_toLeftOf="@+id/divider_vertical_1"
                android:layout_marginRight="0dp" />

            <TextView
                android:id="@+id/textview_hours_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_num"
                app:layout_constraintLeft_toLeftOf="@+id/textview_hours"
                app:layout_constraintRight_toRightOf="@+id/textview_hours"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <ImageView
                android:id="@+id/image_drop_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_drop_down"
                android:layout_marginEnd="8dp" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintlayout_extra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:animateLayoutChanges="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.0">

            <View
                android:id="@+id/divider_horizontal"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?attr/dividerHorizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/divider_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"></LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>